src/features/FileTree/components/styles.module.css
.file-tree-container {
	padding: var(--sidebar-inner-padding);
}

.file-item-outer-container {
	border: 2px solid transparent;
	border-radius: var(--default-border-radius);

	/* If none of the children has drag-over class, then add border color */
	&:not(:has(.drag-over)).drag-over {
		border-color: var(--primary-color);
	}
}

.file-tree-row {
	width: 100%;
	transition: all var(--default-transition-time);
	border-radius: var(--default-border-radius);
	position: relative;
	margin-bottom: var(--small-padding);

	& form {
		width: 100%;
	}

	&:hover > .file-tree-dots,
	&:focus > .file-tree-dots,
	&:focus-within > .file-tree-dots {
		opacity: 1;
	}
}

.file-tree-button {
	width: 100%;
	padding: 10px;

	& p {
		width: 80%;
		text-align: left;
		text-overflow: ellipsis;
		overflow: hidden;
	}
}

.file-tree-button,
.file-tree-new-item-row {
	display: flex;
	align-items: center;
	gap: 0.4rem;
}

.file-tree-new-item-row {
	padding: var(--default-padding);
}

.file-tree-new-item-row input {
	width: 100%;
	padding: var(--default-padding);
	border-width: 1px;
	font-size: 1.6rem;
}

.file-tree-dots {
	opacity: 0;
	position: absolute;
	width: fit-content;
	right: var(--small-padding);
	top: 50%;
	transform: translateY(-50%);
	border: 1px solid transparent;
	border-radius: var(--default-border-radius);

	&:hover {
		background-color: var(--grey-background-color);
	}
}

.file-tree-dots-selected {
	color: #fff;
	outline-color: transparent;

	&:hover {
		background-color: var(--primary-color-shade-10);
		color: #fff;
	}

	&:active,
	&:focus {
		border-color: var(--primary-color-shade-20);
		color: #fff;
	}
}

.file-tree-rename-input {
	padding: var(--default-padding);
	border-width: 1px;
	width: 100%;
	font-size: 1.6rem;
}

.file-tree-item-children {
	padding-left: var(--large-padding);
	transition: all var(--default-transition-time);
	border-left: 1px solid var(--border-color);

	&:hover {
		border-left-color: var(--hover-border-color);
	}
}

.file-tree-item-children.root {
	padding-left: 0;
	border-left: none;
}

.actions-menu {
	position: absolute;
	left: var(--sidebar-inner-horizontal-padding);
	right: var(--sidebar-inner-horizontal-padding);
	padding: var(--large-padding) var(--default-padding);
	border-radius: var(--default-border-radius);
	background-color: var(--default-background-color);
	box-shadow: var(--default-box-shadow);
	display: grid;
	flex-direction: column;
	z-index: 1;
	gap: var(--small-padding);
	overflow-x: auto;

	& button {
		text-align: left;
		display: grid;
		grid-template-columns: 1.6rem 1fr 8rem;
		gap: var(--large-padding);
		align-items: center;
		justify-content: center;

		& * {
			text-overflow: ellipsis;
			overflow: hidden;
			white-space: nowrap;
			font-size: 1.4rem;
		}
	}
}

